k8s/api_gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: sbo-system
spec:
  selector:
    app: sbo
    component: api-gateway
  ports:
  - port: 80
    targetPort: 8800
  type: ClusterIP
